# church_lang

./: CMakeLists.txt  LimitedTextEdit.cpp  LimitedTextEdit.h  Names.txt  README.md  main.cpp  reses.qrc
res/: secNames.txt
